hphp/test/zend/bad/ext-gd/imagegammacorrect_error1.php
<?php

$gamma = imagegammacorrect('string', 1, 5);

?>